# QM-Algorithm-Implementation

./: .gitignore  CMakeLists.txt  Project_Report.tex  README.md  README.txt
include/: expression.h  file-parser.h  implicant.h  qm-minimizer.h  quine-mccluskey-driver.h  verilog-generator.h
src/: expression.cpp  file-parser.cpp  implicant.cpp  main.cpp  qm-minimizer.cpp  quine-mccluskey-driver.cpp  verilog-generator.cpp
testing/data/: README_v4_generation.md  generate_v4_truth_tables.ps1  monitor_v4_run.ps1  run_all_tests_v4.ps1  t0.txt  t10.txt  t11.txt  t12.txt  t13.txt  t14.txt  t15.txt  t17.txt  t18.txt  t19.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  test_01_v1_m1_d0.txt  test_02_v1_m1_d0.txt  test_03_v1_m1_d1.txt  (+25 more)
testing/data/v4/: test_v4_f00001.txt  test_v4_f00002.txt  test_v4_f00003.txt  test_v4_f00004.txt  test_v4_f00005.txt  test_v4_f00006.txt  test_v4_f00007.txt  test_v4_f00008.txt  test_v4_f00009.txt  test_v4_f00010.txt  test_v4_f00011.txt  test_v4_f00012.txt  test_v4_f00013.txt  test_v4_f00014.txt  test_v4_f00015.txt  test_v4_f00016.txt  test_v4_f00017.txt  test_v4_f00018.txt  test_v4_f00019.txt  test_v4_f00020.txt  test_v4_f00021.txt  test_v4_f00022.txt  test_v4_f00023.txt  test_v4_f00024.txt  test_v4_f00025.txt  test_v4_f00026.txt  test_v4_f00027.txt  test_v4_f00028.txt  test_v4_f00029.txt  (+65506 more)
utils/: enums.utils.h  verilog_utils.cpp  verilog_utils.h
